# rmp-eval

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  ci.yml  codeql.yml  lint.yml  release.yml  test.yml
include/: commandlineparser.h  config.h  nictest.h  quantileestimator.h  reporter.h  version.h
packaging/: build_deb.sh
scripts/: get_version.sh
source/: commandlineparser.cpp  config.cpp  ethercatnictest.cpp  main.cpp  quantileestimator.cpp  reporter.cpp
